# qaguru_lesson_16

./: pyproject.toml
